--- a/app/template/default/index.twig
+++ b/app/template/default/index.twig
@@ -37,6 +37,7 @@ $(function(){
 {% endblock %}
 
 {% block main %}
+<button type="submit" id="add-cart" class="btn btn-primary btn-block prevention-btn prevention-mask">ブックを開く</button>
     <div class="row">
        <div class="col-sm-12">
             <div class="main_visual">
