--- a/app/Plugin/Book/Resource/template/upload_image.twig
+++ b/app/Plugin/Book/Resource/template/upload_image.twig
@@ -9,6 +9,9 @@
 
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=0.98">
+	<meta http-equiv="Pragma" content="no-cache">
+	<meta http-equiv="Cache-Control" content="no-store">
+	<meta http-equiv="Expires" content="-1">
 	<script type="text/javascript" src="plugin/book/js/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="plugin/book/js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="plugin/book/js/jquery.mousewheel.min.js"></script>
@@ -16,8 +19,8 @@
 	<script type="text/javascript" src="plugin/book/js/hash.js"></script>
 	<style>
 		#image01 {
-			max-width: 800px;
-			max-height: 1000px;
+			max-width: 400px;
+			max-height: 600px;
 			border: solid 2px #ff0000;
 		}
 	</style>
